add empty endpoint to get loglevel counts
