# src/schemas/systems.go
@@ -36,3 +36,10 @@ type SummaryData struct {
 	WarninglogCount int64     `json:"warninglog_count" binding:"required" example:"10"`
 	ErrorlogCount   int64     `json:"errorlog_count" binding:"required" example:"10"`
 }
+
+// swagger:response levelCountResponse
+type LevelCountResponse struct {
+	InfologCount    int64 `json:"infolog_count" binding:"required" example:"10"`
+	WarninglogCount int64 `json:"warninglog_count" binding:"required" example:"10"`
+	ErrorlogCount   int64 `json:"errorlog_count" binding:"required" example:"10"`
+}
